--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "estoque",
+  "name": "estoque-vercel",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "description": "Gestão de estoque — Vercel + Neon PostgreSQL",
+  "dependencies": {
+    "@neondatabase/serverless": "^0.10.4"
+  }
 }
